# beverage-mixing-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  beverage-mixing.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  beverage-mixing.rockspec  beverage-mixing_sdk.lua  beverage-mixing_types.lua  config.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  (+4 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  beveragemixing_sdk.py  beveragemixing_types.py  config.py  features.py  pyproject.toml
py/core/: context.py  control.py  error.py  operation.py  result.py
py/entity/: beverage_entity.py  dare_entity.py
py/feature/: base_feature.py  debug_feature.py  paging_feature.py  rbac_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_beverage_direct.py  test_beverage_entity.py  test_dare_direct.py  test_dare_entity.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_hook.py  feature_init.py  make_error.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_method.py  result_basic.py  result_headers.py
(+432 files in other folders)
