[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxgig-sdk-beverage-mixing"
version = "0.0.1"
description = "Unofficial generated Python SDK for the Beverage Mixing public API. Not affiliated with or endorsed by the upstream API provider."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["voxgig", "sdk", "generated-sdk", "openapi", "api-client", "beverage-mixing"]
dependencies = [
    "requests>=2.33",
]

[project.urls]
Homepage = "https://github.com/voxgig-sdk/beverage-mixing-sdk"
Repository = "https://github.com/voxgig-sdk/beverage-mixing-sdk"
Issues = "https://github.com/voxgig-sdk/beverage-mixing-sdk/issues"

# Ship the top-level single-file modules (setuptools find only discovers
# package dirs, never these) so the documented import actually installs.
# beveragemixing_types holds the generated @dataclass models.
[tool.setuptools]
py-modules = ["beveragemixing_sdk", "beveragemixing_types", "config", "features"]

# Explicit package list — setuptools auto-discovery refuses to pick when
# multiple top-level dirs (core/entity/feature/utility) are present.
[tool.setuptools.packages.find]
include = ["core*", "entity*", "feature*", "utility*"]

# Ship the PEP 561 py.typed marker(s) so the inline type hints reach consumers.
[tool.setuptools.package-data]
"*" = ["py.typed"]
